test/corpus/strings.txt
================================================================================
Escaped
================================================================================

class S {
  escapedLn() : String {
    "This \
    is OK"
  };
};

--------------------------------------------------------------------------------

(source_file
  (class_item
    name: (type_identifier)
    features: (field_declaration_list
      (method_declaration
        name: (identifier)
        parameters: (parameters)
        return_type: (primitive_type)
        body: (string_literal
          (string_content))))))

================================================================================
Unescaped
:error
================================================================================

class S {
  unescapedLn() : String {
    "This is
    not OK"
  };
};

--------------------------------------------------------------------------------
